constructed website snapshots and implemented the AI agent implementation

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_DB=crm_db
 DATABASE_URL=postgresql+psycopg2://postgres:postgres@db:5432/crm_db
 ENV=development
+OPENAI_API_KEY=your_openai_api_key
+OPENAI_MODEL=gpt-4o-mini
+OPENAI_RATE_LIMIT_RETRIES=5
+OPENAI_RATE_LIMIT_BACKOFF_SECONDS=1.0
